@@ -5,4 +5,4 @@ cd ~/Episteme
 git reset --hard origin/main
 git pull
 mvn clean compile -pl episteme-benchmarks -am -DskipTests
-mvn exec:java -pl episteme-benchmarks -Dexec.mainClass="org.episteme.benchmarks.SystematicBenchmark" -Dexec.args="--run-all --domain Physics --iterations 1" -Pjcuda-linux-x86_64
+MAVEN_OPTS="--add-modules jdk.incubator.vector" mvn exec:java -pl episteme-benchmarks -Dexec.mainClass="org.episteme.benchmarks.SystematicBenchmark" -Dexec.args="--run-all --domain Physics --iterations 1" -Pjcuda-linux-x86_64
